created and modified files

--- a/app/views/homepage.erb
+++ b/app/views/homepage.erb
@@ -1,2 +1,9 @@
+<h4>Welcome to Project Access System</h4><br>
 
-<h1>Welcome</h1>
+<a href='/login'>Log in</a><br>
+       <p>Or</p>
+<a href='/account'>Create account</a><br>
+    <h4>to continue.</h4>
+
+
+
