--- a/app/views/projects/projects.erb
+++ b/app/views/projects/projects.erb
@@ -1,16 +1,28 @@
+<a href='/projects/new'>Add new Project</a><br></br>
+<a href='/projects'>View all Projects</a><br></br>
+<a href='/contractors'>View contractors</a><br></br>
+
+<a href='/contractors/new'>Add Contractor</a><br></br>
+
 <ul>
   <%@projects.all.each do |project|%>
     <li>
-    <h3>Title:<%=project.title%></h3>
-    <h3>Description:<%=project.description%></h3>
-    <h3>Contract Number:<%=project.contract_number%></h3>
-    <h3>Solicitation Number:<%=project.solicitation_number%></h3>
-    <h3>General Contractor:<%=project.general_contractor%></h3>
-    <h3>Type:<%=project.project_type%></h3>
-    <h3>Project Amount:<%=project.project_amount%></h3>
-    <h3>Start Date:<%=project.start_date%></h3>
-    <h3>Sunstantial Completion Date:<%=project.substantial_completion_date%></h3>
-    <h3>Final Completion Date:<%=project.final_completion_date%></h3>
+    <a href='/projects/<%=project.id%>'><%=project.title%></a>
+    <h5>Title:<%=project.title%></h5>
+    <h5>Description:<%=project.description%></h5>
+    <h5>Contract Number:<%=project.contract_number%></h5>
+    <h5>Solicitation Number:<%=project.solicitation_number%></h5>
+    <h5>General Contractor:<%=project.general_contractor%></h5>
+    <h5>Type:<%=project.project_type%></h5>
+    <h5>Project Amount:<%=project.contract_amount%></h5>
+    <h5>Start Date:<%=project.start_date%></h5>
+    <h5>Sunstantial Completion Date:<%=project.substantial_completion_date%></h5>
+    <h5>Final Completion Date:<%=project.final_completion_date%></h5>
     </li>
     <%end%>
 </ul>
+</h1>
+ 
+ <a href='/projects/home'>Back to homepage</a><br>
+
+<a href='/logout'>Log out</a>
