--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,7 @@
 <form action='/login' method='post'>
-<input type='text'  name='username' placeholder='Username'><br>
-<input type='password' name='password' placeholder='Password'><br>
-<input type='submit' value='Login'></input>
+  <input type='text'  name='username' placeholder='Username'><br>
+  <label for="username">username</label><br>
+  <input type='password' name='password' placeholder='Password'><br>
+  <label for="password">password</label><br>
+  <input type='submit' value='Login'></input>
 </form>
